[gd_scene load_steps=6 format=3 uid="uid://dt3gqmpilpxvq"]

[ext_resource type="Script" path="res://scenes/loading.gd" id="1_5e75b"]
[ext_resource type="Texture2D" uid="uid://brjtac1acykvp" path="res://assets/dice/D20_icon.png" id="2_o563m"]

[sub_resource type="Animation" id="Animation_204a1"]
resource_name = "valueadded"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ValueAdded:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.533333, 1.06667, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ValueAdded:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.533333, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(550, 600), Vector2(550, 575)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dice:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.28319, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dice/RollLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_612bx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ValueAdded:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ValueAdded:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(550, 600)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dice:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dice/RollLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urq5x"]
_data = {
"RESET": SubResource("Animation_612bx"),
"valueadded": SubResource("Animation_204a1")
}

[node name="Loading" type="Node2D"]
script = ExtResource("1_5e75b")

[node name="BG" type="TextureRect" parent="."]
offset_right = 1161.0
offset_bottom = 731.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="."]
offset_left = 349.0
offset_top = 115.0
offset_right = 825.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 80
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 200.0
offset_top = 635.0
offset_right = 973.0
offset_bottom = 662.0
step = 1.0

[node name="ValueAdded" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 550.0
offset_top = 600.0
offset_right = 600.0
offset_bottom = 655.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "+0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_urq5x")
}

[node name="Dice" type="Sprite2D" parent="."]
position = Vector2(585, 451)
scale = Vector2(0.274603, 0.274603)
texture = ExtResource("2_o563m")

[node name="RollLabel" type="Label" parent="Dice"]
offset_left = -105.607
offset_top = -105.607
offset_right = 105.393
offset_bottom = 103.393
theme_override_font_sizes/font_size = 100
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
